Changes in version 1.2.4

o REMOVE: `residualEGA` has been removed in favor of `riEGA` (removes {OpenMx} dependency)


Changes in version 1.2.3

o FIX: many bug fixes related to latest update; functions have largely returned to stable status

o UPDATE: Mac and Linux parallelizations have been optimized

o UPDATE: documented examples are more efficient for CRAN checks


Changes in version 1.2.1

o FIX: `bootEGA` read of bootstrap data (was not calling from `datalist` in `do.call` leading to perfect item stability)

o FIX: number of possible colors expanded to 70 (increased from 40)


Changes in version 1.2.0

o FIX: hex codes used in EGA plots

o FIX: `ordered = TRUE` for categorical data in *lavaan* CFAs

o UPDATE: consesnsus clustering is now used with Louvain in `EGA`

o UPDATE: print/summary S3methods have been standardized

o ADD/UPDATE: `boot.ergoInfo` has achieved functional working order. Results can be trusted to suggest whether dynamic data possess the ergodic property

o ADD: information theoretic clustering algorithm for dynamic data is available in `infoCluster`

o REMOVE: "alpha" and "adapt" options in `UVA` (removes {fitdistrplus} dependency)

o REMOVE: {qgraph} plots are no longer available

o ADD: `convert2igraph` is now a core function

o ADD: Jensen-Shannon Divergence `jsd` for determining (dis)similarity between network strcutures

o ADD: `riEGA`, `EGA.fit`, and `hierEGA` functionality to `bootEGA`

o ADD: `hierEGA` functionality to `itemStability` and `dimensionStability`

o UPDATE: "louvain" algorithm used as default for unidimensionality check in `EGA`

o INTERNAL: cleaned up `EGA` and `EGA.estimate`; streamlined code; no user facing differences


Changes in version 1.1.0

o FIX: CRAN note when `if(class(object))`. Replaced by `if(is(object))`.

o FIX: bug in `EGA.estimate` when using the TMFG network method. The resulting EGA plot did not have the correct node names.
