@@ -2,6 +2,8 @@ Changes in version 1.2.4
 
 o REMOVE: `residualEGA` has been removed in favor of `riEGA` (removes {OpenMx} dependency)
 
+o ADD: rotations to `net.loads` and `net.scores`
+
 
 Changes in version 1.2.3
 
